--- a/2015.css
+++ b/2015.css
@@ -1,9 +1,9 @@
 /**
-* @name DTM-16
-* @author 11pixels#2004
+* @name DiscordOMW
+* @author danliend#2738
 * @version 5
 * @invite vUN9sNW
-* @description Formerly known as Oldcord, this theme tries to bring back the 2016 look of Discord
+* @description Get The Old Discord Back
 * @source https://github.com/XYZenix/XYZenixThemes/blob/master/DTM-16.theme.css
 */
 
