--- a/2015.css
+++ b/2015.css
@@ -2,7 +2,7 @@
 * @name DiscordOMW
 * @author danliend#2738
 * @version 5
-* @invite vUN9sNW
+* @invite Ac4GaWwx5e
 * @description Get The Old Discord Back
 * @source https://github.com/XYZenix/XYZenixThemes/blob/master/DTM-16.theme.css
 */
