--- a/2015.css
+++ b/2015.css
@@ -4,7 +4,7 @@
 * @version 5
 * @invite Ac4GaWwx5e
 * @description Get The Old Discord Back
-* @source https://github.com/XYZenix/XYZenixThemes/blob/master/DTM-16.theme.css
+* @source https://github.com/auslie/DiscordOMW/blob/main/2015.css
 */
 
 @import url(https://xyzenix.github.io/XYZenixThemes/DTM-16-V5/DTM-16.css);
