--- a/container.css
+++ b/container.css
@@ -3,7 +3,7 @@
 * @author danliend#2738
 * @version 5
 * @invite Ac4GaWwx5e
-* @description 
+* @description Get The Old Discord Back
 * @source https://github.com/auslie/DiscordOMW/blob/main/2015.css
 */
 :root {
